2021 07 05 bootstrap and Google fonts

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,13 @@
-<div style="background-color: black; height:10rem; border:2rem; margin:2rem">
+<div style="text-align:center; background-color: orangered">
+    <div style="margin: 2rem 0; font-family: 'Fuggles', cursive; ">
+        <h1>Graduation</h1>
+    </div>
+    <div style="margin-bottom:2rem;">
+        <span>nav1</span>n
+        <span>nav2</span>
+        <span>nav3</span>
+        <span>nav4</span>
+    </div>
+
 
 </div>
