--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,8 @@
-<div style="background-color: black; height:10rem; border : 2rem; margin:2rem">
-
+<div style="text-align: center; background-color:black; color:white">
+    <div style="font-size: .8rem; "margin=1.5rem";">
+        <span>공지사항</span>
+        <span>제휴문의</span>
+        <span>서비스 소개</span>
+    </div>
+    <div>Kiryuu</div>
 </div>
