2021 07 05 bootstrap and Google fonts

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,8 @@
 <div style="text-align:center; background-color: orangered">
-    <div style="margin: 2rem 0; font-family: 'Fuggles', cursive; ">
+    <div class="title_logo">
         <h1>Graduation</h1>
     </div>
-    <div style="margin-bottom:2rem;">
+    <div class="header_button">
         <span>nav1</span>n
         <span>nav2</span>
         <span>nav3</span>
