--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,8 @@
 <div style="text-align: center; background-color:black; color:white">
-    <div style="font-size:.8rem; margin:1.5rem;">
+    <div class="footer_button">
         <span>공지사항</span>
         <span>제휴문의</span>
         <span>서비스 소개</span>
     </div>
     <div>Kiryuu</div>
-</div>
+</div>f
