2021 07 05 bootstrap and Google fonts

--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
         <h1>Graduation</h1>
     </div>
     <div class="header_button">
-        <span>nav1</span>n
+        <span>nav1</span>
         <span>nav2</span>
         <span>nav3</span>
         <span>nav4</span>
