--- a/accountapp/templates/accountapp/Base_content.html
+++ b/accountapp/templates/accountapp/Base_content.html
@@ -1,8 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+    <style>
+
+    .testing {
+        background-color: red; height:48px; width: 48px; margin: 1rem;
+        border-radius: .5rem;
+    }
+
+    </style>
     <div style="background-color: yellow; height:20rem; border:2rem; margin:2rem">
-        <h1>최강</h1>
+        <h1>Test</h1>
+        <div class="testing" style="display: inline-block">inline-block</div>
+        <div class="testing" style="display: inline-block; width : 3rem; height: 3rem">inline-block</div>
+        <div class="testing" style="display: inline-block; width : 3em; height: 3em">inline-block</div>
+        <div class="testing" style="display: inline-block; width : 30%; height: 30%">inline-block</div>
     </div>
 
 {% endblock %}
