--- a/accountapp/templates/accountapp/Base_content.html
+++ b/accountapp/templates/accountapp/Base_content.html
@@ -5,6 +5,12 @@
 
     <div style="margin:2rem; text-align:center;">
         <h1>Method</h1>
+
+        <form action="/accounts/hello_world/" method="post">
+            {% csrf_token %}
+            <input class="btn btn-danger rounded-pill px-4" type="submit"></input>
+        </form>
+
         <h3>{{ text }}</h3>
     </div>
 
