--- a/accountapp/templates/accountapp/Base_content.html
+++ b/accountapp/templates/accountapp/Base_content.html
@@ -5,7 +5,7 @@
 
     <div style="margin:2rem; text-align:center;">
         <h1 style="font-family: 'Fuggles', cursive"
-            class="">
+            class="m-5">
             hello world list
         </h1>
         <form action="/accounts/hello_world/" method="post">
