--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -4,10 +4,10 @@
 
     <div class="text-center">
         <div class="m-5">
-            <h4>Sign Up</h4>
+            <h4>Login</h4>
         </div>
         <div>
-            <from action="{% url 'accountapp:create' %}" method="post">
+            <from action="{% url 'accountapp:login' %}" method="post">
                 {% csrf_token %}
                 {{ form }}
                 <div>
