--- a/accountapp/templates/accountapp/create.html
+++ b/accountapp/templates/accountapp/create.html
@@ -4,7 +4,7 @@
 
     <div class="text-center">
         <div class="m-5">
-            <h4>Sign Up</h4>
+            <h4>Sign up</h4>
         </div>
         <div>
             <from action="{% url 'accountapp:create' %}" method="post">
