--- a/templates/header.html
+++ b/templates/header.html
@@ -5,6 +5,7 @@
     <div class="header_button">
         <span>nav1</span>
         <span>nav2</span>
+        {% if not user.is_authenticated %}
         <span>
             <a href ="{% url 'accountapp:login' %}">
                 Login
@@ -14,7 +15,12 @@
                 Signup
             </a>
         </span>
+        {% else %}
+        <span>
+            <a href ="{% url 'accountapp:logout' %}">
+                Logout
+            </a>
+        </span>
+        {% endif %}
     </div>
-
-
 </div>
