--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,8 @@
                 Login
             </a>
         </span>
-        <span><a href ="{% url 'accountapp:create' %}">
+        <span>
+            <a href ="{% url 'accountapp:create' %}">
                 Signup
             </a>
         </span>
