--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -8,15 +8,15 @@
             <h4>Login</h4>
         </div>
         <div>
-            <from action="{% url 'accountapp:login' %}" method="post">
+            <form action="{% url 'accountapp:login' %}" method="post">
                 {% csrf_token %}
                 {% bootstrap_form form %}
                 <div class="m-5">
-                    <input type="submit"
-                           class="btn btn-dark rounded-pill px-5">
+                <input type="submit"
+                       class="btn btn-dark rounded-pill px-5">
                 </div>
 
-            </from>
+            </form>
         </div>
     </div>
 
