--- a/static/base.css
+++ b/static/base.css
@@ -1,15 +1,16 @@
 .title_logo {
     margin: 2rem 0;
     font-family: 'Fuggles', cursive;
-            }
+}
 
 .header_button {
     margin-bottom:2rem;
-                }
+}
 
 .footer_button {
-    font-size:.8rem; margin:1.5rem;
-                }
+    font-size:.8rem;
+    margin:1.5rem;
+}
 
 .mw-500 {
     max-width: 500px;
