--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -9,9 +9,13 @@
         <div>
             {{ target_user.date_joined }}
         </div>
-        <>
             <a href="{% url 'accountapp:update' pk=target_user.pk %}">
                 Update Info
+            </a>
+        </div>
+        </div>
+            <a href="{% url 'accountapp:delete' pk=target_user.pk %}">
+                Quit
             </a>
         </div>
     </div>
