--- a/accountapp/templates/accountapp/Base_content.html
+++ b/accountapp/templates/accountapp/Base_content.html
@@ -6,6 +6,8 @@
     <div style="margin:2rem; text-align:center;">
         <h1 style="font-family: 'Fuggles', cursive"
             class="m-5">
+            {%  %}
+            <img src="{{ target_user.profile.image  }}">
             hello world list
         </h1>
         <form action="/accounts/hello_world/" method="post">
