--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -1,3 +1,4 @@
+
 {% extends 'base.html' %}
 
 {% block content %}
@@ -10,11 +11,11 @@
                      alt="profile image">
                 <h2 class="NNS_B">
                     {{ target_user.profile.nickname }}
-                    {% if target_user == target_user %}
-                    <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
-                        edit
-                    </a>
-                    {% endif %}
+                        {% if target_user == user %}
+                        <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+                            edit
+                        </a>
+                        {% endif %}
                 </h2>
                 <h5>{{ target_user.profile.message }}</h5>
             {% else %}
@@ -24,8 +25,7 @@
                 </a>
             </h2>
             {% endif %}
-            <h5>  {{ target_user.profile.null }}  </h5>
-        </div >
+        </div>
         <div>
             {{ target_user.date_joined }}
         </div>
@@ -42,5 +42,6 @@
         </div>
         {% endif %}
     </div>
+
 
 {% endblock %}
