--- a/accountapp/templates/accountapp/create.html
+++ b/accountapp/templates/accountapp/create.html
@@ -5,7 +5,7 @@
 
     <div class="text-center mw-500 m-auto">
         <div class="m-5">
-            <h4>Sign up</h4>
+            <h4>Sign Up</h4>
         </div>
         <div>
             <form action="{% url 'accountapp:create' %}" method="post">
@@ -18,5 +18,6 @@
             </form>
         </div>
     </div>
+
 
 {% endblock %}
