--- a/templates/head.html
+++ b/templates/head.html
@@ -14,6 +14,11 @@
     {#  Static Files link  #}
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
 
+    {#  MATERIAL ICONS LINK  #}
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet">
+
+
     <style>
         @font-face {
             font-family: 'NanumSquareR';
