--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -1,22 +1,21 @@
-
 {% extends 'base.html' %}
-
 {% block content %}
 
     <div class="text-center mw-500 m-auto">
         <div class="m-5">
+            <h4>{{ target_user.username }}</h4>
             {% if target_user.profile %}
                 <img src="{{ target_user.profile.image.url }}"
                      class="profile_image m-4"
                      alt="profile image">
                 <h2 class="NNS_B">
                     {{ target_user.profile.nickname }}
-                        {% if target_user == user %}
-                        <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}"
-                           class="material-icons round_button">
-                            edit
-                        </a>
-                        {% endif %}
+                    {% if target_user == user %}
+                    <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}"
+                       class="material-icons round_button">
+                        edit
+                    </a>
+                    {% endif %}
                 </h2>
                 <h5>{{ target_user.profile.message }}</h5>
             {% else %}
@@ -32,17 +31,16 @@
         </div>
         {% if user == target_user %}
         <div>
-            <a href="{% url 'accountapp:update' pk=target_user.pk %}">
-                Update Info
+            <a href="{% url 'accountapp:update' pk=target_user.pk %}"
+             class="material-icons round_button mx-4">
+                setting
             </a>
-        </div>
-        <div>
-            <a href="{% url 'accountapp:delete' pk=target_user.pk %}">
-                Quit
+
+            <a href="{% url 'accountapp:delete' pk=target_user.pk %}"
+                class="material-icons round_button mx-4">
+                close
             </a>
         </div>
         {% endif %}
     </div>
-
-
 {% endblock %}
