--- a/profileapp/templates/profileapp/update.html
+++ b/profileapp/templates/profileapp/update.html
@@ -8,7 +8,7 @@
             <h4>Update Profile</h4>
         </div>
         <div>
-            <form action="{% url 'profileapp:create' pk=target_profile.pk %}"
+            <form action="{% url 'profileapp:update' pk=target_profile.pk %}"
                   enctype="multipart/form-data"
                   method="post">
                 {% csrf_token %}
@@ -20,5 +20,6 @@
             </form>
         </div>
     </div>
+
 
 {% endblock %}
