--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -5,12 +5,10 @@
 
     <div class="text-center mw-500 m-auto">
         <div class="m-5">
-            <h4>Update Profile</h4>
+            <h4>Update Info</h4>
         </div>
         <div>
-            <form action="{% url 'profileapp:update' pk=target_profile.pk %}"
-                  enctype="multipart/form-data"
-                  method="post">
+            <form action="{% url 'accountapp:update' pk=target_user.pk %}" method="post">
                 {% csrf_token %}
                 {% bootstrap_form form %}
                 <div class="m-5">
