--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -39,7 +39,7 @@
 
     <script src="{% static 'js/magicgrid.js' %}"></script>
 
-    {% include 'snippets/paganation.html' %}
+    {% include 'snippets/pagenation.html' %}
 
     <div class="text-center my-5">
         <a href="{% url 'articleapp:create' %}"
