--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -34,6 +34,11 @@
                 </div>
             {% endif %}
         </div>
+        <hr>
+
+        <div class="text-center my-4">
+            {% include 'commentapp/create.html' %}
+        </div>
     </div>
 
 {% endblock %}
