--- a/projectapp/templates/projectapp/list.html
+++ b/projectapp/templates/projectapp/list.html
@@ -30,14 +30,14 @@
 
     <div class="container my-4">
 
-        {% for article in article_list %}
+        {% for project in project_list %}
 
             <div>
-                <a href="{% url 'articleapp:detail' pk=article.pk %}">
-                    <img src="{{ article.image.url }}"
+                <a href="{% url 'projectapp:detail' pk=project.pk %}">
+                    <img src="{{ project.image.url }}"
                          alt="">
-                    <span class="m-2 NNS_B">{{ article.title }}</span>
                 </a>
+                <span class="m-2 NNS_B">{{ project.title }}</span>
             </div>
 
         {% endfor %}
@@ -49,13 +49,9 @@
     {% include 'snippets/pagination.html' %}
 
     <div class="text-center my-5">
-        <a href="{% url 'articleapp:create' %}"
-            class="btn btn-dark rounded-pill material-icons">
-            brush
-        </a>
-        <a href="{% url 'articleapp:create' %}"
+        <a href="{% url 'projectapp:create' %}"
             class="btn btn-outline-dark rounded-pill px-5">
-            Create Article
+            Create Project
         </a>
     </div>
 
