--- a/projectapp/templates/projectapp/list.html
+++ b/projectapp/templates/projectapp/list.html
@@ -10,8 +10,6 @@
         }
 
         .container div {
-          width: 45%;
-            max-width: 250px;
             box-shadow: 0 0 .5rem grey;
           display: flex;
           justify-content: center;
@@ -21,8 +19,11 @@
         }
 
         .container div img {
-            width: 100%;
+            width: 7rem;
+            height: 7rem;
             border-radius: 1rem;
+            object-fit: cover;
+
         }
 
     </style>
