--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -13,7 +13,12 @@
             <h5>{{ target_project.description }}</h5>
         </div>
     </div>
-
+    <div class="text-center">
+        <a href="{% url 'subscribe' %}"
+            class="btn btn-primary rounded-pill px-5 ">
+            Subscribe
+        </a>
+    </div>
     <div>
         {% include 'snippets/list_fragment.html' with article_list = object_list %}
     </div>
