--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,14 @@
                 Projects
             </a>
         </span>
-        {% if not user.is_authenticated %}
+    {% if user.is_authenticated %}
+        <span>
+            <a href="{% url 'subscribeapp:list' %}">
+                Subscription
+            </a>
+        </span>
+    {% endif %}
+    {% if not user.is_authenticated %}
         <span>
             <a href ="{% url 'accountapp:login' %}">
                 Login
@@ -24,7 +31,7 @@
                 Signup
             </a>
         </span>
-        {% else %}
+    {% else %}
         <span>
             <a href ="{% url 'accountapp:detail' pk=user.pk %}">
                 Mypage
@@ -35,6 +42,6 @@
                 Logout
             </a>
         </span>
-        {% endif %}
+    {% endif %}
     </div>
 </div>
