--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -2,15 +2,16 @@
 {% load static %}
 
 {% block content %}
+
     <style>
-        .container{
+        .container {
             padding: 0;
             margin: 0 auto;
         }
 
         .container div {
           width: 45%;
-            max-width: 250px;
+            max-width: 200px;
             box-shadow: 0 0 .5rem grey;
           display: flex;
           justify-content: center;
@@ -19,7 +20,7 @@
             flex-direction: column;
         }
 
-        .container div img {
+        .container img {
             width: 100%;
             border-radius: 1rem;
         }
@@ -35,8 +36,8 @@
                 <a href="{% url 'articleapp:detail' pk=article.pk %}">
                     <img src="{{ article.image.url }}"
                          alt="">
-                    <span class="m-2 NNS_B">{{ article.title }}</span>
                 </a>
+                <span class="m-2 NNS_B">{{ article.title }}</span>
             </div>
 
         {% endfor %}
@@ -49,11 +50,11 @@
 
     <div class="text-center my-5">
         <a href="{% url 'articleapp:create' %}"
-            class="btn btn-dark rounded-pill material-icons">
+           class="btn btn-dark rounded-pill material-icons">
             brush
         </a>
         <a href="{% url 'articleapp:create' %}"
-            class="btn btn-outline-dark rounded-pill px-5">
+           class="btn btn-outline-dark rounded-pill px-5">
             Create Article
         </a>
     </div>
