--- a/projectapp/templates/projectapp/detail.html
+++ b/projectapp/templates/projectapp/detail.html
@@ -29,9 +29,8 @@
         {% endif %}
     </div>
     {% endif %}
-    </div>
+
     <div>
-        {% include 'snippets/list_fragment.html' with article_list = object_list %}
+        {% include 'snippets/list_fragment.html' with article_list=object_list %}
     </div>
 
-{% endblock %}
